# elementalist

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  copy-icons.sh  package.json  pnpm-lock.yaml  run-dev.sh  update_design_notes.js  win.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: docs.yml  release.yml  rust.yml  scorecard.yml
.trunk/: trunk.yaml
design_notes/: README.md  game_design_document.md  level-ups.md  magic.md  primal_realms.md  spells.md  spells_by_mana_cost.md  spells_by_tier.md
docs/rustdoc/: github-markdown.css  index.md
elementalist.app/Contents/: Info.plist
game/: Cargo.toml  build.rs
game/src/: app_info.rs  app_state.rs  app_systems.rs  dev_systems.rs  main.rs
game/src/camera/: creation.rs  mod.rs  plugin.rs
game/src/common/: buttons.rs  colors.rs  math.rs  mod.rs  movement.rs  stats.rs
game/src/entities/: player.rs
game/src/events/: menu_interaction.rs  mod.rs  player_action.rs
game/src/game/: mod.rs  plugin.rs  state.rs
game/src/game/systems/: mod.rs  player_control.rs  player_creation.rs
game/src/game_overlays/: mod.rs  plugin.rs  skill_book.rs  status_screen.rs  talismans.rs
game/src/in_game/: mod.rs  plugin.rs
game/src/input/: keyboard.rs  mod.rs
game/src/main_menu/: button_actions.rs  components.rs  main_screen.rs  menu_state.rs  mod.rs  plugin.rs  state.rs  systems.rs
game/src/main_menu/scenes/: audio.rs  main_screen.rs  mod.rs  settings.rs  video.rs
game/src/main_menu/screens/: audio.rs  controls.rs  gameplay.rs  main_screen.rs  settings.rs  video.rs
game/src/player/: animation.rs  avatar.rs  bundle.rs  entity.rs  menu_control.rs  mod.rs  movement.rs  player_control.rs  player_creation.rs  player_sprite.rs  plugin.rs
game/src/resources/: app_state.rs  buttons.rs  cleanup.rs  colors.rs  cursor_position.rs  fonts.rs  mod.rs  movement.rs  plugin.rs  return_to_state.rs  selections.rs  spritesheet.rs  state.rs  style_prefab.rs
game/src/resources/particles/: mod.rs  plugin.rs
game/src/settings_menu/: accessibility.rs  audio.rs  base.rs  button_actions.rs  controls.rs  display.rs  events.rs  gameplay.rs  main.rs  mod.rs  plugin.rs  state.rs
game/src/spells/: cast_spell.rs  components.rs  firebolt.rs  mod.rs  plugin.rs
game/src/splash_screen/: components.rs  mod.rs  plugin.rs  resources.rs  scene.rs  systems.rs
game/src/style_prefab/: inventory.rs  main_menu.rs  mod.rs  settings_menu.rs  status_screen.rs  talismans.rs
game/web/: index.html
game_assets/: Dark Dart.aseprite  Deathbolt.aseprite  Elementalist 2.aseprite  Firebolt.aseprite  Gust.aseprite  Ice Dart.aseprite  Icon.aseprite  Info.plist  Light dart.aseprite  Magic Missile.aseprite  Mana Dart.aseprite  Placeholder.aseprite  README.md  Razor Leaf.aseprite  Spark.aseprite  SpellIconBorder.aseprite  Stone dart.aseprite  Time bolt.aseprite  WaterDart.aseprite  Waterdrop.aseprite  Wizard.aseprite  elementalist.tiled-session  ground-textures.aseprite  shrubs-lrg.aseprite  shrubs-sml.aseprite  shrubs.aseprite  skill_icons.aseprite  skill_icons.tmx  skill_icons.tsx  spell_projectiles.aseprite  spell_projectiles.tmx  spell_projectiles.tsx  talisman_engraving.aseprite  talisman_shaping.aseprite  talismans.aseprite  trees.aseprite  walls.aseprite
game_assets/Environment/: rock.aseprite  tree.aseprite
game_assets/Icon/: icon.icns
game_assets/Skills/: Aeromancy.aseprite  Ampiliomancy.aseprite  Arcanomancy.aseprite  Chronomancy.aseprite  Citomancy.aseprite  Cryomancy.aseprite  Diminiomancy.aseprite  Fulgomancy.aseprite  Geomancy.aseprite  Hydromancy.aseprite  Mortomancy.aseprite  Mutatiomancy.aseprite  Necromancy.aseprite  Photomancy.aseprite  Pyromancy.aseprite  Trudomancy.aseprite  Umbramancy.aseprite  Vitomancy.aseprite
game_assets/Spell Projectiles/: Dark Dart.aseprite  Firebolt.aseprite  Gust.aseprite  (+3 more)
game_data/: README.md
game_library/: Cargo.toml
game_library/src/: acceleration.rs  attribute.rs  biome.rs  buttons.rs  camera_scale.rs  colors.rs  cursor_position.rs  depth_2d.rs  events.rs  experience.rs  font_resource.rs  health.rs  lib.rs  mana.rs  markers_to_biomes.rs  menu_helper.rs  movement_bundle.rs  particle.rs  realm_data.rs  schedule.rs  settings.rs  shared_traits.rs  simple_object.rs  skill.rs  spell_bundle.rs  spell_choices.rs  spell_data.rs  spell_lifetime.rs  stat.rs  stat_bonus.rs  stat_bundle.rs  stat_effect.rs  state.rs  tileset.rs  velocity.rs  volume.rs
game_library/src/audio/: mod.rs  player_interaction.rs  plugin.rs
game_library/src/data_loader/: entity_sprites.rs  events.rs  header_def.rs  loader.rs  mod.rs  particles.rs  plugin.rs  realms.rs  resources.rs  simple_objects.rs  spells.rs  storage.rs  tilesets.rs
game_library/src/enums/: biome.rs  cast_category.rs  cast_slot.rs  cast_type.rs  game_systems.rs  magic.rs  mod.rs  particle_attachment.rs  skill.rs  spell.rs  spell_collision.rs  spell_target.rs  stat.rs
game_library/src/images/: animation.rs  animation_bundle.rs  animation_frame.rs  animation_system.rs  animation_timer.rs  entity_sprite.rs  mod.rs  plugin.rs  state.rs  texture_atlas.rs  tileset.rs
game_library/src/math/: mod.rs  slope_vec.rs
game_library/src/noise/: beta_info.rs  generator.rs  mod.rs  plugin.rs  resources.rs
game_library/src/physics/: mod.rs  plugin.rs
game_library/src/progress_bar/: color_scheme.rs  config.rs  enums.rs  mod.rs  plugin.rs  traits.rs
game_library/src/save_file/: data.rs  events.rs  initialize.rs  mod.rs  paths.rs  plugin.rs  save_load.rs
game_library/src/spells/: bundle.rs  definition.rs  lifetime.rs  mod.rs  particles.rs  polymorph.rs  selection.rs  talisman.rs
game_library/tests/: acceleration.rs  attribute.rs  attribute_tests.rs  camera_scale.rs  data_file.rs  experience.rs  experience_tests.rs  health.rs  mana.rs  spell_lifetime.rs  spells.rs  stat.rs  stat_bonus.rs  stat_bonus_test.rs  velocity.rs  volume.rs
src/: game.rs  main.rs  menu.rs  player.rs  settings.rs  splash.rs  state.rs
tools/: build-mac.sh  copy-icons.sh  package.json  pnpm-lock.yaml
(+210 files in other folders)
