[package]
name = "elementalist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# When running the game in development, use the dynamic linking feature of Bevy to speed
# up compilation times. `cargo run --features bevy/dynamic_linking` will enable this.
bevy = "0.12.1"
bevy_pkv = "0.9.0"
leafwing-input-manager = "0.11.2"
serde = "1.0.194"
tracing = "0.1.40"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
