[package]
name = "game_library"
version = "2.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy-inspector-egui = "0.23.2"
bevy_hanabi = "0.10.0"
# Local disk storage in a key-value store. Settings are stored with this.
bevy_pkv = { git = "https://github.com/johanhelsing/bevy_pkv#af0b750b1dbfc8db58dbb2bd07c5eda72e714b79" }
noise = "0.8.2"
serde = "1.0.197"
serde_default_utils = "0.2.1"
serde_yaml = "0.9.32"
tracing = "0.1.40"
walkdir = "2.4.0"
bevy_rapier2d = { version = "0.25.0", features = [
    "parallel",
    "debug-render-2d",
] }

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]


[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
unreachable_code = "warn"
unreachable_patterns = "warn"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
