[package]
name = "game_library"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.22.1"
bevy_hanabi = "0.9.0"
# Local disk storage in a key-value store. Settings are stored with this.
bevy_pkv = "0.9.1"
noise = "0.9.0"
serde = "1.0.201"
serde_default_utils = "0.2.1"
serde_yaml = "0.9.34"
tracing = "0.1.40"
walkdir = "2.5.0"
bevy_rapier2d = { version = "0.24.0", features = [
    "parallel",
    "debug-render-2d",
] }

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]


[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
unreachable_code = "warn"
unreachable_patterns = "warn"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
